Replace --no-platform with --with-platform
Replace --no-platform parameter with --with-platform=directory, which
allows to specify the location of the platform headers to be used
instead of downloading the default platform files from Khronos.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ project(glxw C)
 find_package(PythonInterp 2.7.0 REQUIRED)
 find_package(OpenGL)
 
-option(GLXW_USE_EGL "Use EGL" OFF)
-mark_as_advanced(GLXW_USE_EGL)
+option(GLXW_USE_EGL_OPTION "Use EGL" OFF)
+mark_as_advanced(GLXW_USE_EGL_OPTION)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/include)
 
@@ -109,7 +109,21 @@ if(WIN32 AND NOT GLXW_USE_EGL)
     add_library(glxw_wgl STATIC ${CMAKE_CURRENT_BINARY_DIR}/src/glxw_wgl.c)
 endif()
 
-if(GLXW_USE_EGL)
+if(GLXW_USE_EGL OR GLXW_USE_EGL_OPTION)
+    find_path(GLXW_EGL_PATH EGL/eglplatform.h PATHS /opt/vc/include/)
+    if(GLXW_EGL_PATH)
+        message("found eglplatform.h")
+        include_directories(${GLXW_EGL_PATH})
+
+        set(GLXW_NO_PLATFORM "--with-platform" ${GLXW_EGL_PATH})
+
+	find_path(GLXW_VCOS_PATH vcos_platform_types.h PATHS /opt/vc/include/interface/vcos/pthreads/)
+        if(GLXW_VCOS_PATH)
+            message("found vcos_platform_types.h (Raspberry PI)")
+            include_directories(${GLXW_VCOS_PATH})
+        endif()
+    endif()
+
     add_custom_command(
         OUTPUT
             ${CMAKE_CURRENT_BINARY_DIR}/include/EGL/egl.h
@@ -123,6 +137,7 @@ if(GLXW_USE_EGL)
             --download
             --include ${CMAKE_CURRENT_SOURCE_DIR}/include
             --output ${CMAKE_CURRENT_BINARY_DIR}
+            ${GLXW_NO_PLATFORM}
         MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/glxw_gen.py
         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 
